Refactor code smells
I installed SonarLint plugin